# ultimate_compound_calc

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  final_calc.rs  pmt_calc.rs  principal.rs  principal_calc.rs  rate_calc.rs  test.rs  time_calc.rs
src/: main.rs  test.rs
src/test/: final_calc.rs  principal_calc.rs  rate_calc.rs
