[package]
name = "ultimate_compound_calculator"
version = "0.1.0"
authors = [ "VladDrag <ioanvlad90@gmail.com>, empea-careercriminal <empeamtk@googlemail.com>"]
edition = "2018"
description = "A library containing fuctions to calculate compound interest"
documentation = "https://github.com/VladDrag/ultimate_compound_calc"			# change this to https://docs.rs/ultimate_compound_calculator/0.1.0
repository = "https://github.com/VladDrag/ultimate_compound_calc"
license = "MIT"
license-file = "LICENSE.txt"
keywords = ["finance", "calculation", "investment"]
categories = ["mathematics"]
publish = true


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_approx_eq = "1.1.0"